--- a/package.json
+++ b/package.json
@@ -41,29 +41,30 @@
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
     "@supabase/supabase-js": "^2.58.0",
+    "@types/node": "24.10.0",
+    "@types/react": "19.2.2",
+    "@types/react-dom": "19.2.2",
+    "autoprefixer": "10.4.21",
+    "class-variance-authority": "^0.7.1",
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.3.0",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.446.0",
+    "next": "16.0.1",
+    "postcss": "8.5.6",
+    "react": "19.2.0",
     "react-day-picker": "^8.10.1",
+    "react-dom": "19.2.0",
     "react-hook-form": "^7.53.0",
     "react-resizable-panels": "^2.1.3",
     "recharts": "^2.12.7",
     "sonner": "^1.5.0",
-    "@types/node": "24.10.0",
-    "@types/react": "19.2.2",
-    "@types/react-dom": "19.2.2",
-    "autoprefixer": "10.4.21",
-    "next": "16.0.1",
-    "postcss": "8.5.6",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
+    "tailwind-merge": "^2.5.2",
     "tailwindcss": "4.1.17",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "5.9.3",
     "vaul": "^0.9.9",
-    "zod": "^3.23.8",
-    "tailwind-merge": "^2.5.2",
-    "tailwindcss-animate": "^1.0.7"
+    "zod": "^3.23.8"
   }
 }
